force-app/main/default/objects/Test_Scenario__c/Test_Scenario__c.object-meta.xml
<CustomObject>
    <label>Test Scenario</label>
    <nameField>
        <displayFormat>TEST-{0000}</displayFormat>
        <label>Test ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Scenarios</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>