force-app/main/default/objects/Test_Scenario__c/fields/Business_Continuity_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Business_Continuity_Scenario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Business Continuity Scenario?</label>
    <type>Checkbox</type>
</CustomField>