force-app/main/default/objects/Test_Scenario__c/fields/End_To_End_Scenario__c.field-meta.xml
<CustomField>
    <fullName>End_To_End_Scenario__c</fullName>
    <defaultValue>false</defaultValue>
    <label>End To End Scenario?</label>
    <type>Checkbox</type>
</CustomField>