force-app/main/default/objects/Test_Scenario__c/fields/Fail_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fail_Reason__c</fullName>
    <label>Fail Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Config</fullName>
            </value>
            <value>
                <fullName>Config (advanced)</fullName>
            </value>
            <value>
                <fullName>Code</fullName>
            </value>
            <value>
                <fullName>Process Not Defined</fullName>
            </value>
            <value>
                <fullName>User Scenario Not Valid</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>