force-app/main/default/objects/Test_Scenario__c/fields/MIBOS_Created_By__c.field-meta.xml
<CustomField>
    <fullName>MIBOS_Created_By__c</fullName>
    <label>MIBOS Created By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>