force-app/main/default/objects/Test_Scenario__c/fields/MiBOS_Test_ID__c.field-meta.xml
<CustomField>
    <fullName>MiBOS_Test_ID__c</fullName>
    <label>MiBOS Test ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>