force-app/main/default/objects/Test_Scenario__c/fields/Pre_condition__c.field-meta.xml
<CustomField>
    <fullName>Pre_condition__c</fullName>
    <label>Pre-condition</label>
    <type>TextArea</type>
</CustomField>