force-app/main/default/objects/Test_Scenario__c/fields/Ready_for_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Ready_for_Implementation__c</fullName>
    <inlineHelpText>Estimated when this Test Scenario will be ready to be implemented:</inlineHelpText>
    <label>Ready for Implementation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>by Code Freeze Wed Oct 15th</fullName>
            </value>
            <value>
                <fullName>after Code Freeze Wed Oct 15th</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>