force-app/main/default/objects/Test_Scenario__c/fields/Requirement_Title__c.field-meta.xml
<CustomField>
    <fullName>Requirement_Title__c</fullName>
    <description>copies the Requirement Title for reporting</description>
    <formula>Requirement__r.Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement Title</label>
    <type>Text</type>
</CustomField>