force-app/main/default/objects/Test_Scenario__c/fields/Scenario__c.field-meta.xml
<CustomField>
    <fullName>Scenario__c</fullName>
    <label>Scenario</label>
    <type>TextArea</type>
</CustomField>