force-app/main/default/objects/Test_Scenario__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Passed</fullName>
                <color>#78C953</color>
                <label>Passed</label>
            </value>
            <value>
                <fullName>Failed</fullName>
                <color>#A53711</color>
                <label>Failed</label>
            </value>
            <value>
                <fullName>Ready for Re-Test - MIBOS</fullName>
            </value>
            <value>
                <fullName>Ready for Re-Test - UAT</fullName>
                <color>#0B6FCE</color>
                <label>Ready for Re-Test - UAT</label>
            </value>
            <value>
                <fullName>Ready for Re-Test - PROD</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Scheduled for UAT2</fullName>
            </value>
            <value>
                <fullName>Scheduled for UAT3</fullName>
            </value>
            <value>
                <fullName>Scheduled for UAT4 (Contract CarveOut Only)</fullName>
            </value>
            <value>
                <fullName>Not Tested</fullName>
                <color>#FFFF66</color>
                <label>Not Tested</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Phase 1.5</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>