force-app/main/default/objects/Test_Scenario__c/fields/Test_Case_Action__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_Action__c</fullName>
    <label>Test Case Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>