force-app/main/default/objects/Test_Scenario__c/fields/Test_Case_Step__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_Step__c</fullName>
    <label>Test Case Step</label>
    <length>10</length>
    <type>Text</type>
</CustomField>