force-app/main/default/objects/Test_Scenario__c/fields/Test_Results_Count__c.field-meta.xml
<CustomField>
    <fullName>Test_Results_Count__c</fullName>
    <inlineHelpText>Count the number of Test Results</inlineHelpText>
    <label>Test Results Count</label>
    <summaryForeignKey>Test_Result__c.Test_Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>