force-app/main/default/objects/Test_Scenario__c/fields/Testing_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Testing_Readiness__c</fullName>
    <label>Testing Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Unclear</fullName>
            </value>
            <value>
                <fullName>Not Ready</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Permissions Issue</fullName>
            </value>
            <value>
                <fullName>CPQ/ Echosign</fullName>
            </value>
            <value>
                <fullName>Enhancement Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>