force-app/main/default/objects/Test_Scenario__c/fields/Testing_Suggestions_Variations__c.field-meta.xml
<CustomField>
    <fullName>Testing_Suggestions_Variations__c</fullName>
    <label>Testing Suggestions/Variations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>