force-app/main/default/objects/Test_Scenario__c/fields/Track_From_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Track_From_Requirement__c</fullName>
    <formula>TEXT(Requirement__r.Track__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Track (From Requirement)</label>
    <type>Text</type>
</CustomField>