force-app/main/default/objects/Test_Scenario__c/fields/UAT3_Test_Result_Count__c.field-meta.xml
<CustomField>
    <fullName>UAT3_Test_Result_Count__c</fullName>
    <label>UAT3 Test Result Count</label>
    <summaryFilterItems>
        <field>Test_Result__c.Test_Cycle__c</field>
        <operation>equals</operation>
        <value>UAT 3</value>
    </summaryFilterItems>
    <summaryForeignKey>Test_Result__c.Test_Scenario__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>