force-app/main/default/objects/Test_Scenario__c/fields/Verification_User__c.field-meta.xml
<CustomField>
    <fullName>Verification_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Verification User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Test_Scenarios</relationshipName>
    <type>Lookup</type>
</CustomField>