force-app/main/default/objects/Test_Scenario__c/listViews/All_Account_Test_Scenarios.listView-meta.xml
<ListView>
    <fullName>All_Account_Test_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Scenario__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Area__c</field>
        <operation>contains</operation>
        <value>Accounts</value>
    </filters>
    <label>All Account Test Scenarios</label>
    <language>en_US</language>
</ListView>