force-app/main/default/objects/Test_Scenario__c/listViews/All_Business_Continuity_Scenarios.listView-meta.xml
<ListView>
    <fullName>All_Business_Continuity_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Area__c</columns>
    <columns>Track_From_Requirement__c</columns>
    <columns>Requirement_Title__c</columns>
    <columns>Scenario__c</columns>
    <columns>Expected_Result__c</columns>
    <columns>Fail_Reason__c</columns>
    <columns>Test_Case_Step__c</columns>
    <columns>Business_Continuity_Scenario__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Business_Continuity_Scenario__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Business Continuity Test Scenarios</label>
    <language>en_US</language>
</ListView>