force-app/main/default/objects/Test_Scenario__c/listViews/All_Contract_Legal_Test_Scenarios.listView-meta.xml
<ListView>
    <fullName>All_Contract_Legal_Test_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Status__c</columns>
    <columns>Scenario__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Requirement__c</columns>
    <columns>Test_Results_Count__c</columns>
    <columns>Test_Case_Action__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Scenario__c</field>
        <operation>contains</operation>
        <value>CONTRACT</value>
    </filters>
    <label>All Contract/Legal Test Scenarios</label>
    <language>en_US</language>
</ListView>