force-app/main/default/objects/Test_Scenario__c/listViews/All_Data_Test_Scenarios.listView-meta.xml
<ListView>
    <fullName>All_Data_Test_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>Scenario__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Status__c</columns>
    <columns>Test_Results_Count__c</columns>
    <columns>MiBOS_Test_ID__c</columns>
    <columns>Requirement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Track_From_Requirement__c</field>
        <operation>equals</operation>
        <value>Data</value>
    </filters>
    <label>All Data Test Scenarios</label>
    <language>en_US</language>
</ListView>