force-app/main/default/objects/Test_Scenario__c/listViews/All_Failed_Test_Scenarios.listView-meta.xml
<ListView>
    <fullName>All_Failed_Test_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Assigned_To__c</columns>
    <columns>Area__c</columns>
    <columns>Track_From_Requirement__c</columns>
    <columns>Requirement_Title__c</columns>
    <columns>Scenario__c</columns>
    <columns>Expected_Result__c</columns>
    <columns>Fail_Reason__c</columns>
    <columns>Test_Case_Step__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>All Failed Test Scenarios</label>
    <language>en_US</language>
</ListView>