force-app/main/default/objects/Test_Scenario__c/listViews/All_Legal2.listView-meta.xml
<ListView>
    <fullName>All_Legal2</fullName>
    <columns>NAME</columns>
    <columns>Area__c</columns>
    <columns>Testing_Readiness__c</columns>
    <columns>Status__c</columns>
    <columns>Scenario__c</columns>
    <columns>Track_From_Requirement__c</columns>
    <columns>Verification_User__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>j filio</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Scheduled for UAT4 (Contract CarveOut Only)</value>
    </filters>
    <label>All Legal UAT 4</label>
    <language>en_US</language>
</ListView>