force-app/main/default/objects/Test_Scenario__c/listViews/All_Marketing_Test_Scenarios.listView-meta.xml
<ListView>
    <fullName>All_Marketing_Test_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Area__c</columns>
    <columns>Status__c</columns>
    <columns>Scenario__c</columns>
    <columns>Business_Continuity_Scenario__c</columns>
    <columns>Test_Results_Count__c</columns>
    <columns>Track_From_Requirement__c</columns>
    <columns>Requirement__c</columns>
    <columns>Requirement_Title__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Track_From_Requirement__c</field>
        <operation>equals</operation>
        <value>Marketing</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Passed,Failed,Ready for Re-Test,Scheduled for UAT3,Not Tested</value>
    </filters>
    <label>All Marketing Test Scenarios</label>
    <language>en_US</language>
</ListView>