force-app/main/default/objects/Test_Scenario__c/listViews/All_Passed_CPQ_Scenarios.listView-meta.xml
<ListView>
    <fullName>All_Passed_CPQ_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Verification_User__c</columns>
    <columns>Scenario__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Track_From_Requirement__c</field>
        <operation>equals</operation>
        <value>CPQ</value>
    </filters>
    <label>All Passed CPQ Scenarios</label>
    <language>en_US</language>
</ListView>