force-app/main/default/objects/Test_Scenario__c/listViews/All_Sales_Scenarios.listView-meta.xml
<ListView>
    <fullName>All_Sales_Scenarios</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Verification_User__c</columns>
    <columns>Scenario__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Ready_for_Implementation__c</columns>
    <columns>Track_From_Requirement__c</columns>
    <columns>Requirement__c</columns>
    <columns>Area__c</columns>
    <columns>Pre_condition__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Track_From_Requirement__c</field>
        <operation>contains</operation>
        <value>Sales</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notContain</operation>
        <value>Cancelled,Scheduled for UAT4,Duplicate,Phase II,Enhancement Request</value>
    </filters>
    <label>All Sales Scenarios</label>
    <language>en_US</language>
</ListView>